2009-09-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.pre.in:
	[ 2863736 ] Bump downloaded CIM schema to 2.22

2009-09-18  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* Makefile.am test/stageschema.sh
	[ 2859978 ] TestProviders for SFCB

2009-09-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2860163 ] Missing commRead error checks

2009-09-09  Surendra Kodali

         * wbemcat
         [ 2858565 ] Need user and password support for wbemcat 

2009-09-09  Surendra Kodali

         * configure.ac
         [ 2691765 ] --disable-debug option is not working.

2009-09-08  Surendra Kodali
         * sfcBroker.c
         [ 2726890 ] sfcbd is starting with invalid options

2009-09-08  Surendra Kodali
        * mofpp.c
        [ 2726835 ] closing file two times in mofpp.c causes corruption

2009-09-03  Pratyusha Doddapaneni
        * result.c
	[ 2531949 ] GetInstance call ends up with SIGSEGV when Released

2009-09-03  Pratyusha Doddapaneni
	* configure.ac
	[ 2835364 ] No check for lcov when code coverage is enabled.

2009-09-03  Pratyusha Doddapaneni
	* classProviderGz.c
        [ 2832552 ] Memory leak in classProviderGz.c

2009-09-02  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* classProvider.c, classProviderGz.c, classProviderMem.c:
	[ 1887383 ] isa() in interopProvider.c doesn't find all children

2009-09-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c:
	[2791613] interop provider gives invalid error while creating instance
	(based on patch from Gokul)

2009-09-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2847757 ] local cim client execQuery leak

2009-08-31 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/ABT/ABTScript:
	[2845131] Add summary.html to uploaded results

2009-08-26  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2844812 ] CMPIConnect2 doesn't init CMPIStatus completely
	(fix by Klaus Kampf)
