@@ -3,6 +3,9 @@
 	* getSchema.pre.in:
 	[ 2863736 ] Bump downloaded CIM schema to 2.22
 
+	* interopProvider.c:
+	[ 2863774 ] interopProvider needs IndividualSubscriptionSupported prop
+	
 2009-09-18  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
 	* Makefile.am test/stageschema.sh
 	[ 2859978 ] TestProviders for SFCB
